# boilerplate_fastapi

./: .gitignore  .pylintrc  LICENSE  LICENSE.md  alembic.ini  pyproject.toml  start_server.bat
config/: logging copy.conf  logging.conf
env/: .env.sample
migrations/: README  env.py
migrations/versions/: 00034a3680df_add_configuration_data.py  223aad981bd7_initial_migration.py  33ae8db5d28c_add_configuration_table.py  5b3efea308c9_add_organization_configuration_table.py  726c6c49b353_add_lookup_data.py  7b2335731c2d_add_lookup_table.py  8547ccfb65df_add_organization_table.py  88bb72b194a0_add_initial_migrations.py  98d3ec8e554b_add_organization_data.py
src/: main.py
src/modules/auth/: config.py
src/modules/auth/controllers/: controller.py
src/modules/auth/events/: login_event.py
src/modules/auth/models/: base.py  request.py  response.py
src/modules/auth/repositories/: repository.py
src/modules/auth/routes/: route.py
src/modules/auth/services/: base.py  service.py
src/modules/base/: config.py
src/modules/base/controller/: base.py
src/modules/base/db/: __init__.py  base.py  session.py  transactional.py
src/modules/base/enums/: __init__.py  data_type.py
src/modules/base/events/: base.py
src/modules/base/exceptions/: __init__.py  base.py  handler.py
src/modules/base/helpers/: redis.py  token.py
src/modules/base/models/: base.py  response.py
src/modules/base/repository/: __init__.py  base.py  enum.py
src/modules/base/services/: base.py
src/modules/core/: config.py
src/modules/core/enums/: __init__.py  (+1 more)
src/server/: main.py  start.py
(+43 files in other folders)
